--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Hello, world! I'm David Freeman
+title: Tokyo Debunker Info Summaries
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Tokyo Debunker information summaries for use with fan created AI bot projects.
 permalink: ':title/'
 baseurl: "/tdb-lore" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
