various file and layout updates

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Darkwick Debunker # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: TDB-logo.png # add your photo
 about-author: Information summaries for Tokyo Debunker. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
